<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_updates"
            android:icon="@mipmap/ic_nav_person"
            android:title="@string/my_updates" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@mipmap/ic_nav_person"
            android:title="@string/my_session" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@mipmap/ic_nav_person"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@mipmap/ic_nav_person"
            android:title="@string/my_favorites" />
        <item
            android:id="@+id/nav_wall"
            android:icon="@mipmap/ic_nav_person"
            android:title="@string/my_wall" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@mipmap/ic_nav_person"
            android:title="@string/my_messages" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@mipmap/ic_nav_person"
            android:title="@string/my_activity" />
        <item
            android:id="@+id/nav_questions"
            android:icon="@mipmap/ic_nav_person"
            android:title="@string/my_questions" />
        <item
            android:id="@+id/nav_answers"
            android:icon="@mipmap/ic_nav_person"
            android:title="@string/my_answers" />
    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_settings" android:title="@string/my_settings" />
        <item android:id="@+id/nav_feedback" android:title="@string/help_and_feedback" />
        <item android:id="@+id/nav_about" android:title="@string/about_this_app" />
    </group>
</menu>