<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    style="@style/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:id="@+id/cardViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/usericon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="1dp">


            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:maxLines="2"
                android:gravity="fill"
                android:textStyle="bold"
                android:text="@string/item_name"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:weightSum="5" />

            <TextView
                android:id="@+id/item_description"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="10dp"
                android:text="@string/item_description"
                android:gravity="fill"
                android:lines="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/item_tags"
                android:layout_marginLeft="10dp"
                android:text="@string/item_tags"
                android:gravity="fill"
                android:lines="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_app_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:gravity="center_vertical"
                android:text="@string/sample_rating"
                android:textSize="10sp" />

            <ImageView
                android:id="@+id/iv_app_rating"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_alignBottom="@+id/tv_app_rating"
                android:layout_alignTop="@+id/tv_app_rating"
                android:layout_toEndOf="@+id/tv_app_rating"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_star_black" />

            <TextView
                android:id="@+id/tv_is_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/free"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>